--- a/src/i18n/translations/es.json
+++ b/src/i18n/translations/es.json
@@ -28,6 +28,11 @@
       "content": "Regala una experiencia única, hacemos tarjetas especiales para regalar tratamientos:Rituales corporales, masajes con envolturas, tratamientos ayurveda, masaje con piedras calientes, tratamientos descontracturantes... Contacta con nosotros y te asesoraremos!"
     }
   },
+  "about": {
+    "title": "Quienes somos",
+    "text": "KiroDues un equipo competente y eficaz, con amplios conocimientos técnicos. Le ofrecemos una amplia gama de tratamientos a unos precios muy competitivos y de la máxima calidad respaldados por un equipo que se caracteriza por su trato cordial y espíritu de servicio.<br><br>Nos encantará mostrarle todas las posibilidades y opciones a su disposición; estamos convencidos de que encontrará lo que está buscando. <br><br>La meta principal de KiroDues es, sin lugar a dudas, poder satisfacer a todas las necesidades de nuestros clientes. Nuestros puntos fuertes son : una dilatada experiencia y un extraordinario concepto de atención al cliente.",
+    "opinion": "Menciones en las redes"
+  },
   "footer": {
     "contact_us": "Llámanos",
     "visit_us": "Visítanos",
