[PDT] add page deatil treatment

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -50,6 +50,11 @@
     "content": "Naturopathy and Wellness in Barcelona",
     "button": "Discount Pack"
   },
+  "treatment": {
+    "title": "You should see our custom packages",
+    "button": "Discount Pack",
+    "price": "Price per session {{value}}€"
+  },
   "collaborators": {
     "title": "Collaborators"
   },
