--- a/src/i18n/translations/es.json
+++ b/src/i18n/translations/es.json
@@ -1,4 +1,30 @@
 {
+  "helmet": {
+    "home": {
+      "title": "Kirodues - Naturopathy Center",
+      "description": ""
+    },
+    "aboutus": {
+      "title": "",
+      "description": ""
+    },
+    "discount_packs": {
+      "title": "",
+      "description": ""
+    },
+    "treatments": {
+      "title": "",
+      "description": ""
+    },
+    "collaborators": {
+      "title": "",
+      "description": ""
+    },
+    "contact": {
+      "title": "",
+      "description": ""
+    }
+  },
   "menu": {
     "aboutus": "Quienes somos",
     "discount_packs": "Pack descuento",
