--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -82,7 +82,7 @@
     "price": "Price per session {{value}}€"
   },
   "collaborators": {
-    "title": "Collaborators"
+    "title": "Collaborators Team"
   },
   "contact": {
     "title": "KiroDues",
