--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -34,12 +34,12 @@
   },
   "home": {
     "first_block": {
-      "title": "Welcome to KiroDues in Barcelona, massage center and naturopathy",
+      "title": "Welcome to KiroDues in Sevilla - Granada, massage center and naturopathy",
       "content": "The KiroDues center was born thanks to the passion and curiosity of its founders for the art of massage and the different holistic and alternative techniques. Through the fusion of anatomical-physiological, energetic and emotional knowledge allows us to find the most suitable combination for each person and thus get to restore the physical-emotional balance.",
       "button": "See More"
     },
     "second_block": {
-      "title": "Naturopathy and Wellness Treatments in Barcelona",
+      "title": "Naturopathy and Wellness Treatments in Sevilla - Granada",
       "button": "See Treatments",
       "treatment": "treatments",
       "massage": "massage",
