--- a/src/i18n/translations/es.json
+++ b/src/i18n/translations/es.json
@@ -34,12 +34,12 @@
   },
   "home": {
     "first_block": {
-      "title": "Bienvenidos a KiroDues en Barcelona, centro de masajes y naturopatía",
+      "title": "Bienvenidos a KiroDues en Sevilla - Granada, centro de masajes y naturopatía",
       "content": "El centro KiroDues nació gracias a la pasión y curiosidad de sus fundadoras por el arte del masaje y las diferentes técnicas holísticas y alternativas. A través de la fusión de los conocimientos anatómicos-fisiológicos, energéticos y emocionales nos permite encontrar la combinación más adecuada para cada persona y así llegar a restablecer el equilibrio físico-emocional.",
       "button": "Ver Más"
     },
     "second_block": {
-      "title": "Tratamientos Naturopatía y Wellnes en Barcelona",
+      "title": "Tratamientos Naturopatía y Wellnes en Sevilla - Granada",
       "button": "Ver Tratamientos",
       "treatment": "Tratamientos",
       "massage": "masajes",
