fix style in contact add job to conlaborators

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -22,7 +22,7 @@
     },
     "contact": {
       "title": "Contact with Us",
-      "description": "Encuentra tu centro más cercano"
+      "description": "Find your nearest center in Seville and Granada"
     }
   },
   "menu": {
