--- a/src/i18n/translations/es.json
+++ b/src/i18n/translations/es.json
@@ -22,7 +22,7 @@
     },
     "contact": {
       "title": "Contacta con Nosotros",
-      "description": "Encuentra tu centro más cercano"
+      "description": "Encuentra tu centro más cercano en Sevilla y Granada"
     }
   },
   "menu": {
